@@ -41,5 +41,9 @@
 </p>
 
 <p>
+	<strong>Scheduled Task plugin to clean up old images</strong>. Cleaning up unused images is no longer implemented as code built into the image generation to improve performance. SocialMagick 3.0 introduces a Joomla! Scheduled Task plugin which allows you to clean up unused images. Alternatively, you can follow the documentation instructions to the standard GNU/Linux command `find` to clean up unused images manually, or in a CRON job.
+</p>
+
+<p>
 	<strong>ImageMagick: Show ellipses when text is being truncated</strong>. When text overlaid on an OpenGraph image is being truncated, the ellipses are now shown regardless of whether you use the ImageMagick or the GD library.
 </p>
