@@ -28,8 +28,4 @@ VALUES
     (3, 'Cutout', 1, '2025-09-04 12:25:12', 70, null, 0, 0, '0000-00-00 00:00:00', 0, '{"template-w":1200,"template-h":640,"base-color":"#000000","base-color-alpha":"0","base-image":"media\\/com_socialmagick\\/images\\/cutout.png#joomlaImage:\\/\\/local-media\\/com_socialmagick\\/images\\/cutout.png?width=1200&height=630","use-article-image":"1","image_source":"customfullintro","image_field":"ogimage","static_image":"","image-z":"under","image-cover":"0","image-width":410,"image-height":420,"image-x":700,"image-y":115,"overlay_text":"1","text-font":"OpenSans-Bold.ttf","font-size":32,"text-color":"#ffffff","text-height":415,"text-width":430,"text-align":"left","text-y-center":"1","text-y-adjust":0,"text-y-absolute":0,"text-x-center":"0","text-x-adjust":0,"text-x-absolute":165}'),
     (4, 'Logo', 1, '2025-09-08 21:14:06', 70, null, 0, 0, null, 0, '{"template-w":1200,"template-h":630,"base-color":"#339092","base-color-alpha":"100","base-image":"","use-article-image":"1","image_source":"static","image_field":"ogimage","static_image":"media\\/com_socialmagick\\/images\\/logo-white-256.png#joomlaImage:\\/\\/local-media\\/com_socialmagick\\/images\\/logo-white-256.png?width=256&height=256","image-opacity":50,"image-z":"over","image-cover":"0","image-width":96,"image-height":96,"image-x":1088,"image-y":518,"overlay_text":"1","text-font":"OpenSans-Bold.ttf","font-size":86,"text-color":"#ffffff","text-height":502,"text-width":1000,"text-align":"left","text-y-center":"1","text-y-adjust":0,"text-y-absolute":64,"text-x-center":"1","text-x-adjust":0,"text-x-absolute":0}');
 
-CREATE TABLE IF NOT EXISTS `#__socialmagick_images` (
-    `hash` char(32) COLLATE utf8mb4_unicode_ci NOT NULL,
-    `last_access` datetime NOT NULL,
-    PRIMARY KEY (`hash`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 DEFAULT COLLATE=utf8mb4_unicode_ci;
+DROP TABLE IF EXISTS `#__socialmagick_images`;
