@@ -5,4 +5,3 @@
  */
 
 DROP TABLE IF EXISTS `#__socialmagick_templates`;
-DROP TABLE IF EXISTS `#__socialmagick_images`;
