@@ -1,0 +1,20 @@
+PLG_TASK_SOCIALMAGICK_TASK_REMOVEOLDIMAGES_TITLE="SocialMagick - Delete Obsolete Images"
+PLG_TASK_SOCIALMAGICK_TASK_REMOVEOLDIMAGES_DESC="Deletes auto-generated OpenGraph images which have not been accessed for a while."
+
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_LABEL="Older Than"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_DESC="Images which have been last used more than this amount of time ago will be deleted when this task runs."
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1MIN="1 minute"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_15MIN="15 minutes"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_30MIN="30 minutes"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1HOUR="1 hour"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_3HOURS="3 hours"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_6HOURS="6 hours"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_12HOURS="12 hours"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1DAY="1 day"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_3DAYS="3 days"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1WEEK="1 week"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_2WEEKS="2 weeks"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1MONTH="1 month"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_3MONTHS="3 months"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_6MONTHS="6 months"
+PLG_TASK_SOCIALMAGICK_OLDIMAGES_PARAM_OLDERTHAN_OPT_1YEAR="1 year"
