@@ -1,0 +1,2 @@
+PLG_TASK_SOCIALMAGICK="Task - SocialMagick"
+PLG_TASK_SOCIALMAGICK_XML_DESC="Allows you to schedule SocialMagick maintenance tasks using Joomla's Scheduled Tasks feature."
