@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<!--
+    This only works on IIS 7 or later. See https://www.iis.net/configreference/system.webserver/security/requestfiltering/fileextensions
+-->
+<configuration>
+    <system.webServer>
+        <security>
+            <requestFiltering>
+                <fileExtensions allowUnlisted="false" >
+                    <clear />
+                    <add fileExtension=".html" allowed="true"/>
+                </fileExtensions>
+            </requestFiltering>
+        </security>
+    </system.webServer>
+</configuration>
